Docker VM K8s/k8s/myweb/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: my-web
spec: {}
status: {}
