Docker VM K8s/k8s/myweb/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: myweb
  name: myweb
  namespace: my-web
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myweb
  type: ClusterIP
status:
  loadBalancer: {}
