Docker VM K8s/k8s/myweb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: myweb
  namespace: my-web
spec:
  rules:
  - host: myweb.home.lan
    http:
      paths:
      - backend:
          service:
            name: myweb
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
